# web-seeker-agent

./: README.md  pyproject.toml
src/agent/: __main__.py  agent.py
src/wiseguy/: __init__.py  __main__.py  agent.py  utils.py
